INTYG-5727: Nya bekräftelseskyltar för komplettering

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -40,7 +40,11 @@
 
         <div id="arende-kompletteringar-section" class="arende-list-section" ng-show="viewState.intygProperties.isSent && isFilterKomplettering">
 
-          <wc-arende-komplettera-utkast-warning ng-if="config.intygContext.isSigned"></wc-arende-komplettera-utkast-warning>
+          <div ng-if="config.intygContext.isSigned">
+            <wc-arende-komplettera-utkast-warning></wc-arende-komplettera-utkast-warning>
+            <wc-arende-komplettera-intyg-confirmation></wc-arende-komplettera-intyg-confirmation>
+            <wc-arende-komplettera-meddelande-confirmation arende-list="arendeList"></wc-arende-komplettera-meddelande-confirmation>
+          </div>
 
           <!-- list of komplettering arenden -->
           <div ng-repeat="arendeListItem in arendeList | filter:kompletteringarFilter | orderBy:'+senasteHandelse' as kompletteringarList"
