--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -82,6 +82,8 @@
   @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeaderAmne.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeIntygNotSentMessage/wcArendeIntygNotSentMessage.scss';
+  @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraIntygConfirmation/wcArendeKompletteraIntygConfirmation.scss';
+  @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraMeddelandeConfirmation/wcArendeKompletteraMeddelandeConfirmation.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeNoAdministrativaFragorMessage/wcArendeNoAdministrativaFragorMessage.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeNoKompletteringarMessage/wcArendeNoKompletteringarMessage.directive.scss';
