--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.scss
@@ -27,4 +27,8 @@ wc-intyg-status-slot {
   .wc-color-11 {
     color: $wc-color-11;
   }
+
+  .icon-wc-ikon-02, .icon-wc-ikon-alert02 {
+    line-height: 1;
+  }
 }
