--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -4,7 +4,7 @@
     <li ng-class="{active: isFilterKomplettering}">
       <a ng-click="setFilterKomplettering(true)" id="arende-filter-kompletteringsbegaran">
         Kompletteringsbegäran
-        <span id="arende-kompletteringsbegaran-count" class="badge badge__stat" ng-show="unhandledKompletteringCount > 0">
+        <span id="arende-kompletteringsbegaran-count" class="badge badge__stat" ng-show="config.intygContext.isSigned && unhandledKompletteringCount > 0">
           {{unhandledKompletteringCount}}
         </span>
       </a>
@@ -12,7 +12,7 @@
     <li ng-class="{active: !isFilterKomplettering}">
       <a ng-click="setFilterKomplettering(false)" id="arende-filter-administrativafragor">
         Administrativa frågor
-        <span id="arende-administrativafragor-count" class="badge badge__stat" ng-show="unhandledAdministrativaFragorCount > 0">
+        <span id="arende-administrativafragor-count" class="badge badge__stat" ng-show="config.intygContext.isSigned && unhandledAdministrativaFragorCount > 0">
           {{unhandledAdministrativaFragorCount}}
         </span>
       </a>
