--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
@@ -25,6 +25,7 @@ wc-arende-panel-tab {
       padding: 5px 15px;
       margin-right: 13px;
       text-decoration: none;
+      height: 32px;
 
       .badge__stat {
         @extend %wc-typo-13;
