INTYG-5733: Design ärendehanteringsfooter för UTHOPP

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogMessage.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogMessage.template.html
@@ -1,9 +1,8 @@
 <div class="modal-header">
   <h3><span dynamic-label key="{{titleId}}"></span></h3>
 </div>
-<div class="modal-body">
-  {{bodyText}}
+<div class="modal-body" ng-bind-html="bodyText">
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" id="confirmationOkButton" ng-click="$close()">OK</button>
+  <button type="button" class="btn btn-primary" id="confirmationOkButton" ng-click="$close()">Stäng</button>
 </div>
