--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -81,6 +81,7 @@
   @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeaderAmne.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss';
+  @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeIntygNotSentMessage/wcArendeIntygNotSentMessage.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraIntygConfirmation/wcArendeKompletteraIntygConfirmation.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraMeddelandeConfirmation/wcArendeKompletteraMeddelandeConfirmation.scss';
