--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
@@ -1,21 +1,24 @@
 <div>
-  <div class="tab-footer">
+  <div class="tab-footer" ng-if="showKompletteringButton()">
 
     <wc-button
-        ng-if="showKompletteringButton()"
+        wc-authority="SVARA_MED_NYTT_INTYG"
         btn-id="komplettera-intyg"
         btn-class="btn-success"
         btn-click="kompletteraIntyg()"
         loading="updateInProgress"
-        disabled="updateInProgress"
-    >
+        disabled="updateInProgress">
       <i class="icon-wc-ikon-komplettera"></i> Komplettera intyg</button>
     </wc-button>
 
     <button class="btn btn-primary"
-            ng-if="showKompletteringButton()"
             id="kan-inte-komplettera"
             ng-click="openKompletteringDialog()">
       <i class="icon-wc-ikon-comment"></i> Kan inte komplettera</button>
+
+    <a wc-authority request-origin="UTHOPP" ng-click="openUthoppInfoModal()">
+      <span dynamic-label key="common.arende.komplettering.uthopp.link"></span>
+    </a>
+
   </div>
 </div>
