INTYG-5574: Lagat wc read-only-view sida vid uppvisning av intyg i rehabstöd så att scrollbar visas, rätt bakgrund mm.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.scss
@@ -1,5 +1,11 @@
 .wc-intyg-read-only {
   padding: 20px 30px;
+  overflow-y: auto;
+
+  .intyg-body {
+    padding: 15px;
+    background-color: $wc-color-27;
+  }
 
   .srs-border {
     border-right:1px $wc-color-20 solid;
