INTYG-5742: fixade tester.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -77,4 +77,4 @@
 
 </wc-support-panel-scrollable-body>
 
-<wc-arende-footer ng-if="config.intygContext.isSigned" config="config" arende-list="arendeList"></wc-arende-footer>
+<wc-arende-footer ng-if="config.intygContext.isSigned" arende-list="arendeList"></wc-arende-footer>
