INTYG-5603: Lagt till logik för att dölja och visa asterisker vid rätt tillfälle.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDate/ueDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDate/ueDate.directive.html
@@ -2,7 +2,7 @@
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
     <div class="form-horizontal">
       <div>
-        <ue-label config="::config.label"></ue-label>
+        <ue-label config="::config.label" model="::model"></ue-label>
       </div>
       <div>
         <span wc-date-picker-field
