--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss
@@ -38,6 +38,9 @@ ue-dodsorsak-row {
   .dodsorsak-row__controls {
     padding-left: 30px;
     position: relative;
+    .required {
+      left: 18px;
+    }
   }
 
   .dodsorsak-row__letter {
