--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDropdown/ueDropdown.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDropdown/ueDropdown.directive.html
@@ -1,5 +1,5 @@
 <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]" class="ue-del-fraga">
-  <ue-label config="::config.label"></ue-label>
+  <ue-label config="::config.label" model="::model"></ue-label>
 
   <wc-dropdown data-items="config.choices"
                ng-model="modelGetterSetter"
