--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePrognos/uePrognos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePrognos/uePrognos.directive.html
@@ -1,6 +1,6 @@
 <div class="ue-del-fraga">
     <div>
-        <ue-label config="::config.label"></ue-label>
+        <ue-label config="::config.label" model="::model"></ue-label>
     </div>
 
     <ue-validation-wrapper field-type="radio-group"
