--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTypeahead/ueTypeahead.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTypeahead/ueTypeahead.directive.html
@@ -1,6 +1,6 @@
 <div class="input-full ue-del-fraga">
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
-    <ue-label config="::config.label"></ue-label>
+    <ue-label config="::config.label" model="::model"></ue-label>
     <div>
       <input type="text"
              class="form-control"
