--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueVagueDate/ueVagueDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueVagueDate/ueVagueDate.directive.html
@@ -1,8 +1,8 @@
 <div class="vagueDate ue-del-fraga">
   <table>
     <tr>
-      <td><h5 class="wcFormLabel"><span class="year"><span dynamic-label key="common.label.year"></span> <span class="required">*</span></span></h5></td>
-      <td><h5 class="wcFormLabel"><span class="month"><span dynamic-label key="common.label.month"></span> <span class="required">*</span></span></h5></td>
+      <td><h5 class="wcFormLabel"><span class="year"><span dynamic-label key="common.label.year"></span> <span class="required" ng-if="!vagueDateModel.year">*</span></span></h5></td>
+      <td><h5 class="wcFormLabel"><span class="month"><span dynamic-label key="common.label.month"></span> <span class="required" ng-if="!vagueDateModel.month && vagueDateModel.monthEnabled">*</span></span></h5></td>
       <td><h5 class="wcFormLabel"><span class="day"><span dynamic-label key="common.label.day"></span></span></h5></td>
     </tr>
     <tr>
