--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -444,6 +444,7 @@
     font-style: normal;
     position: absolute;
     left: -14px;
+    top: -4px;
   }
 
   /* Not used? */
@@ -757,4 +758,3 @@
   .date-width {
     width: 130px;
   }
-  
