--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
@@ -1,6 +1,6 @@
 <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]" class="ue-del-fraga">
   <div class="form-horizontal">
-    <ue-label config="::config.label"></ue-label>
+    <ue-label config="::config.label" model="::model"></ue-label>
     <div data-ng-repeat="choice in ::config.choices">
       <wc-checkbox-wrapper>
         <input ng-attr-id="{{::config.modelProp}}-{{::choice|ueDomIdFilter}}" type="checkbox" ng-model="model[config.modelProp][choice]" ng-change="updateValidation()">
