--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
@@ -1,6 +1,6 @@
 <div class="ue-del-fraga">
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
-    <ue-label config="::config.label"></ue-label>
+    <ue-label config="::config.label" model="::model"></ue-label>
     <div class="row form-horizontal">
       <div class="{{config.htmlClass}}" data-ng-repeat="choice in ::config.choices">
         <wc-radio-wrapper>
