--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueVagueDate/ueVagueDate.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueVagueDate/ueVagueDate.scss
@@ -19,13 +19,18 @@
 
 ue-vague-date {
     .month {
+      .required {
+        left: -2px;
+      }
         padding: 0 10px;
     }
     .year, .month {
+      position: relative;
         width: 140px;
     }
     .day {
         width: 40px;
+        position: relative;
         .form-control[disabled] {
             border: 1px solid $wc-color-23;
             background-color: $wc-color-20;
@@ -34,5 +39,8 @@ ue-vague-date {
             height: 40px;
             text-align: center;
         }
+    }
+    .required {
+      left: -10;
     }
 }
