INTYG-5243: Fixat tooltips samt lagt till 3 nya intygsstatusar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.scss
@@ -35,4 +35,14 @@ wc-intyg-button-bar {
       color: $wc-color-00;
     }
   }
+
+  .btn[disabled] {
+    pointer-events: none;
+  }
+  .button-tooltip {
+    display: inline-block;
+    .disabled {
+      cursor: not-allowed;
+    }
+  }
 }
