--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcNewPersonIdMessage/wcNewPersonIdMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcNewPersonIdMessage/wcNewPersonIdMessage.directive.html
@@ -1,5 +1,8 @@
 <div id="wc-new-person-id-message" ng-show="show">
   <wc-alert-message alert-severity="warning" id="nyttPersonnummer">
-    <span ng-bind-html="message"></span>
+    <span ng-if="!showAlert" ng-bind-html="message"></span>
+    <span ng-if="showAlert">
+      <a ng-click="openModal()"><span ng-bind-html="message"></span></a>
+    </span>
   </wc-alert-message>
 </div>
