--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -65,6 +65,7 @@
   @import 'components/wcIntegrationEnhetSelector/_wcIntegrationEnhetSelector.directive.scss';
   @import 'components/wcIntygPatientNamnPersonnummer/wcIntygPatientNamnPersonnummer.directive.scss';
   @import 'components/wcNewPersonIdMessage/wcNewPersonIdMessage.scss';
+  @import 'components/wcPatientAddressMissingFromIntegrationMessage/wcPatientAddressMissingFromIntegrationMessage.scss';
   @import 'components/wcPatientInfoChangeMessage/wcPatientInfoChangeMessage.scss';
   @import 'components/wcPatientStatus/wcPatientStatus.directive.scss';
   @import 'components/wcRadioWrapper/wcRadioWrapper.directive.scss';
