INTYG-5302: Lots and lots of styling fixes

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.scss
@@ -27,6 +27,7 @@ wc-dropdown {
         text-align: left;
         border-radius: 4px;
         border: 1px solid $wc-color-15;
+        height: 38px;
 
         span {
             flex: 1 1 auto;
