--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss
@@ -21,6 +21,11 @@ ue-dodsorsak-row {
 
   display: block;
 
+  .label-padding {
+    display: inline-block;
+    padding: 10px 0;
+  }
+
   input.form-control {
     height: 38px;
     border: 1px solid $wc-color-15;
