--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
@@ -1,13 +1,13 @@
 <div>
-  <table class="dodsorsak-multi" style="width: 100%">
+  <table class="dodsorsak-multi">
     <tr>
-      <th style="width: 60%;"><span dynamic-label key="{{config.beskrivningLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{config.beskrivningLabel}}.HLP"></span>
+      <th class="description-width"><span class="label-padding" dynamic-label key="{{config.beskrivningLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{config.beskrivningLabel}}.HLP"></span>
         <span wc-help-chevron-text help-text-key="{{config.beskrivningLabel}}.HLP"></span>
       </th>
-      <th class="date-width"><span dynamic-label key="{{config.datumLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{config.datumLabel}}.HLP"></span>
+      <th><span class="label-padding" dynamic-label key="{{config.datumLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{config.datumLabel}}.HLP"></span>
         <span wc-help-chevron-text help-text-key="{{config.datumLabel}}.HLP"></span></th>
-      <th><span dynamic-label key="{{config.orsakLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{config.orsakLabel}}.HLP"></span>
-        <span wc-help-chevron-text help-text-key="{{config.orsakLabel}}.HLP"></span>
+      <th><span class="label-padding" dynamic-label key="{{config.orsakLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{config.orsakLabel}}.HLP"></span>
+        <span class="label-padding" wc-help-chevron-text help-text-key="{{config.orsakLabel}}.HLP"></span>
       </th>
     </tr>
     <tr ng-repeat="orsak in model[config.modelProp] track by $index">
