--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss
@@ -23,7 +23,7 @@ ue-dodsorsak-row {
 
   .label-padding {
     display: inline-block;
-    padding: 10px 0;
+    padding: 5px 0 10px 0;
   }
 
   input.form-control {
