INTYG-5742: Vidarebefordra kopplat och refaktorerat.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
@@ -1,31 +1,32 @@
 <div>
   <div class="tab-footer">
     <div class="footer__komplettera">
-      <wc-button
-          wc-authority="SVARA_MED_NYTT_INTYG"
-          btn-id="komplettera-intyg"
-          btn-class="btn-success margin-right"
-          btn-click="kompletteraIntyg()"
-          loading="updateInProgress"
-          disabled="updateInProgress">
-        <i class="icon-wc-ikon-komplettera"></i> Komplettera intyg</button>
-      </wc-button>
+      <div ng-if="showKompletteringButtons()">
+        <wc-button
+            wc-authority="SVARA_MED_NYTT_INTYG"
+            btn-id="komplettera-intyg"
+            btn-class="btn-success margin-right"
+            btn-click="kompletteraIntyg()"
+            loading="updateInProgress"
+            disabled="updateInProgress">
+          <i class="icon-wc-ikon-komplettera"></i> Komplettera intyg</button>
+        </wc-button>
 
-      <button class="btn btn-primary"
-              id="kan-inte-komplettera"
-              ng-click="openKompletteringDialog()">
-        <i class="icon-wc-ikon-comment"></i> Kan inte komplettera</button>
+        <button class="btn btn-primary"
+                id="kan-inte-komplettera"
+                ng-click="openKompletteringDialog()">
+          <i class="icon-wc-ikon-comment"></i> Kan inte komplettera</button>
 
-      <a wc-authority request-origin="UTHOPP" ng-click="openUthoppInfoModal()">
-        <span dynamic-label key="common.arende.komplettering.uthopp.link"></span>
-      </a>
+        <a wc-authority request-origin="UTHOPP" ng-click="openUthoppInfoModal()">
+          <span dynamic-label key="common.arende.komplettering.uthopp.link"></span>
+        </a>
+      </div>
     </div>
-
     <button type="button" id="vidarebefordraEjHanterad"
             wc-authority="VIDAREBEFORDRA_FRAGASVAR"
-            ng-show="!parentViewState.intygProperties.isRevoked"
+            ng-show="!intygProperties.isRevoked"
             class="btn btn-primary stick-right" title="Skicka mejl med en länk till intyget för att informera den som ska hantera frågan-svaret."
-            ng-click="openMailDialog()" ng-show="!parentViewState.intygProperties.isRevoked">
+            ng-click="openMailDialog()">
       <i class="icon-wc-ikon-reply"></i> Vidarebefordra</span>
     </button>
   </div>
