--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
@@ -14,6 +14,10 @@ wc-arende-panel-tab {
     }
   }
 
+  .bottom-fadeout-gradient {
+    padding: 0;
+  }
+
   .navbar-nav {
     > li > a {
       @extend %wc-typo-06;
