--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.scss
@@ -29,6 +29,10 @@ wc-arende-footer {
       display: flex;
       flex: 1;
 
+      div {
+        display: flex;
+      }
+
       .margin-right {
         margin-right: 5px;
       }
