--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
@@ -1,7 +1,8 @@
 <div>
   <div class="tab-footer">
     <div class="footer__komplettera">
-      <div ng-if="showKompletteringButtons()">
+      <div ng-if="showKompletteringButtons()"
+           wc-authority="BESVARA_KOMPLETTERINGSFRAGA" intygstyp="{{intygProperties.type}}">
         <wc-button
             wc-authority="SVARA_MED_NYTT_INTYG"
             btn-id="komplettera-intyg"
@@ -23,7 +24,7 @@
       </div>
     </div>
     <button type="button" id="vidarebefordraEjHanterad"
-            wc-authority="VIDAREBEFORDRA_FRAGASVAR"
+            wc-authority="VIDAREBEFORDRA_FRAGASVAR" intygstyp="{{intygProperties.type}}"
             ng-show="!intygProperties.isRevoked"
             class="btn btn-primary stick-right" title="Skicka mejl med en länk till intyget för att informera den som ska hantera frågan-svaret."
             ng-click="openMailDialog()">
