--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvSignedBy/uvSignedBy.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvSignedBy/uvSignedBy.scss
@@ -38,6 +38,13 @@ uv-signed-by {
       h3 {
         @extend %wc-typo-05;
         padding: $intyg-signed-card-h3-padding;
+        span {
+          padding-top: 5px;
+          display: inline-block;
+          &:empty {
+            display: none;
+          }
+        }
       }
 
       p {
