--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
@@ -41,6 +41,6 @@
 .wc-help-chevron__textarea {
   .scrollable-body {
     padding: 20px;
-    max-height: 120px;
+    max-height: 190px; // 190 - padding = 140 = 7 text rows
   }
 }
