--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvliden/wcSekretessAvliden.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvliden/wcSekretessAvliden.directive.html
@@ -1,8 +1,8 @@
 <div>
   <wc-alert-message id="wc-avliden-text-{{ uuid }}" ng-if="avliden"
         wc-alert-message alert-severity="warning"
-        class="patient-alert">Patienten har avlidit</wc-alert-message >
+        class="patient-alert">Patienten är avliden</wc-alert-message >
   <wc-alert-message id="wc-sekretessmarkering-text-{{ uuid }}" ng-if="sekretessmarkering"
         alert-severity="sekretess"
-        class="patient-alert">Patienten har sekretessmarkering</wc-alert-message >
+        class="patient-alert">Patienten har en sekretessmarkering</wc-alert-message >
 </div>
