INTYG-5302: Logic to handle padding dependig on type

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'ue-del-fraga' : config.htmlClass != 'no-padding-top'}">
+<div ng-class="{'ue-del-fraga' : config.htmlClass != 'no-padding'}">
 <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
   <div class="row form-horizontal">
     <ue-label class="col-sm-12" config="::config.label"></ue-label>
