--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'ue-del-fraga' : classList.length < 1}">
+<div ng-class="{'ue-del-fraga' : !noPaddingClass}">
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
     <ue-label config="::config.label" model="::model"></ue-label>
     <div class="row form-horizontal">
